# jamo-backend

./: .dockerignore  .env.example  .gitignore  API_SPEC.md  CLAUDE.md  LICENSE  Makefile  README.md  build.gradle.kts  docker-compose.yml  settings.gradle.kts
.claude/agents/: code-reviewer.md  ddd-architect.md  security-reviewer.md  test-reviewer.md
.claude/prompts/: 01_inital_decisions.md
chat-service/: Dockerfile  build.gradle.kts
common-auth-jwt/: build.gradle.kts
common-infrastructure/: build.gradle.kts
contracts/: build.gradle.kts
diary-service/: Dockerfile  build.gradle.kts
docker/: README.md
docker/scripts/: generate-dev-keys.sh
docs/: README.md
docs/adr/: 0001-authentication-architecture.md  0002-service-decomposition.md  0003-ai-call-architecture.md  0004-contracts-naming-and-versioning.md  0005-no-jpa-associations.md  0006-oauth-provider-integration.md  0007-contracts-first-parallel-development.md  _index.md  (+1 more)
identity-service/: Dockerfile  build.gradle.kts
learning-service/: build.gradle.kts
platform-service/: build.gradle.kts
python-services/ai-service/: .gitignore  Dockerfile  Makefile  README.md  grpc_server.py  main.py  pyproject.toml
python-services/ai-service/ai/: __init__.py  openai_factory.py
python-services/ai-service/ai/llm/: __init__.py  completer.py
python-services/ai-service/ai/stt/: __init__.py  transcriber.py
python-services/ai-service/ai/tts/: __init__.py  synthesizer.py
python-services/ai-service/proto/: __init__.py
python-services/ai-service/tests/: test_components.py  test_servicer.py
(+889 files in other folders)
