[project]
name = "ai-service"
version = "0.1.0"
description = "jamo AI 추론 게이트웨이 — LLM/STT/TTS gRPC 서비스 (ADR-0003)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "grpcio>=1.66.0",
    "grpcio-tools>=1.66.0",
    "protobuf>=5.28.0",
    # LLM 호출 (첫 단계 OpenAI 만)
    "openai>=1.50.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
